force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__LatestMilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestMilestoneDate__c</fullName>
    <label>Latest Milestone Date</label>
    <summarizedField>KimbleOne__Milestone__c.KimbleOne__MilestoneDate__c</summarizedField>
    <summaryForeignKey>KimbleOne__Milestone__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>