force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__LatestPayableItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestPayableItemDate__c</fullName>
    <label>Latest Payable Item Date</label>
    <type>Date</type>
</CustomField>