force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__LatestReceivableItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestReceivableItemDate__c</fullName>
    <label>Latest Receivable Item Date</label>
    <type>Date</type>
</CustomField>