force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__NotionalContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NotionalContractRevenue__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Obsolete - Notional Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>