force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__NotionalRevenueAdjustmentsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NotionalRevenueAdjustmentsTotal__c</fullName>
    <label>Notional Revenue Adjustments Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>