force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__OriginatingProposal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OriginatingProposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Proposal</label>
    <referenceTo>KimbleOne__Proposal__c</referenceTo>
    <relationshipLabel>Delivery Elements (Originating Proposal)</relationshipLabel>
    <relationshipName>AllDeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>