force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__OtherContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OtherContractCost__c</fullName>
    <label>Other Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>