force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__PeriodCostsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodCostsTotal__c</fullName>
    <label>Period Costs</label>
    <summarizedField>KimbleOne__PeriodCost__c.KimbleOne__ForecastCost__c</summarizedField>
    <summaryForeignKey>KimbleOne__PeriodCost__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>