force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__PeriodRevenuesTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodRevenuesTotal__c</fullName>
    <label>Period Revenues</label>
    <summarizedField>KimbleOne__PeriodRevenue__c.KimbleOne__ForecastRevenue__c</summarizedField>
    <summaryForeignKey>KimbleOne__PeriodRevenue__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>