force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__POAllocationCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__POAllocationCount__c</fullName>
    <label>PO Allocation Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>