force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__POAllocationExhaustedDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__POAllocationExhaustedDate__c</fullName>
    <label>PO Allocation Exhausted Date</label>
    <type>Date</type>
</CustomField>