force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__Product__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>KimbleOne__Product__c</referenceTo>
    <relationshipLabel>Delivery Elements</relationshipLabel>
    <relationshipName>DeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>