force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ProductExtension__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductExtension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Extension</label>
    <referenceTo>KimbleOne__Product__c</referenceTo>
    <relationshipLabel>Delivery Elements (ProductExtension)</relationshipLabel>
    <relationshipName>DeliveryElementsProductExtensions</relationshipName>
    <type>Lookup</type>
</CustomField>