force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__Proposal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Proposal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>KimbleOne__Proposal__c</referenceTo>
    <relationshipLabel>Delivery Elements</relationshipLabel>
    <relationshipName>DeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>