force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RecurringCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RecurringCost__c</fullName>
    <inlineHelpText>Enter the incurred direct cost per Period or per Unit per Period.</inlineHelpText>
    <label>Z_Obsolete - Recurring Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>