force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RecurringRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RecurringRevenue__c</fullName>
    <label>Z_Obs Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>