force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RevenueAdjustmentsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueAdjustmentsTotal__c</fullName>
    <label>Revenue Adjustments Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>