force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RevenueCap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueCap__c</fullName>
    <label>Revenue Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>