force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RevenueForecastMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueForecastMode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Forecast Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RevenueForecastMode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Delivery Elements (Revenue Forecast Mode)</relationshipLabel>
    <relationshipName>DeliveryElementsRevenueForecastMode</relationshipName>
    <type>Lookup</type>
</CustomField>