force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RevenueMilestonesTotalValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueMilestonesTotalValue__c</fullName>
    <label>Milestone Revenues</label>
    <summarizedField>KimbleOne__RevenueMilestone__c.KimbleOne__MilestoneValue__c</summarizedField>
    <summaryForeignKey>KimbleOne__RevenueMilestone__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>