force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RevenueUnitsPerPeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueUnitsPerPeriod__c</fullName>
    <label>Z_Obsolete - Revenue Units Per Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>