force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__RevenueUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Delivery Elements (Revenue)</relationshipLabel>
    <relationshipName>RevenueDeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>