force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ServicesContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ServicesContractCost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Services Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>