force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ServicesContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ServicesContractMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__ServicesContractCost__c)  || ISBLANK(KimbleOne__ServicesContractRevenue__c)  || KimbleOne__ServicesContractRevenue__c = 0 ), ( KimbleOne__ServicesContractRevenue__c  -  KimbleOne__ServicesContractCost__c )  /  KimbleOne__ServicesContractRevenue__c,  NULL )</formula>
    <label>Services Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>