force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ServicesContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ServicesContractMarginAmount__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__ServicesContractCost__c)  || ISBLANK(KimbleOne__ServicesContractRevenue__c) ), KimbleOne__ServicesContractRevenue__c - KimbleOne__ServicesContractCost__c, NULL )</formula>
    <label>Services Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>