force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__StartDateBeforeProposalAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartDateBeforeProposalAcceptanceDate__c</fullName>
    <formula>if ( ISBLANK(KimbleOne__Proposal__c), KimbleOne__StartDate__c &lt; KimbleOne__DeliveryGroup__r.KimbleOne__Proposal__r.KimbleOne__AcceptanceDate__c,  KimbleOne__StartDate__c &lt;  KimbleOne__Proposal__r.KimbleOne__AcceptanceDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Before Acceptance Date</label>
    <type>Checkbox</type>
</CustomField>