force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__StartDateOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartDateOffset__c</fullName>
    <label>StartDateOffset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>