force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__SupplierInvoicingCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoicingCurrencyIsoCode__c</fullName>
    <label>Supplier Invoicing Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>