force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__TargetMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TargetMargin__c</fullName>
    <label>Target Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>