force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaxCode</label>
    <referenceTo>KimbleOne__TaxCode__c</referenceTo>
    <relationshipLabel>Delivery Elements</relationshipLabel>
    <relationshipName>Delivery_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>