force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__UsageCosts__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageCosts__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__ForecastP3Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>