force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__UsageRevenues__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageRevenues__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__ForecastP3Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Revenues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>