force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/Productive_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Productive_Utilization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag Non-Billable Elements as Productive Utilization for reporting purposes.  Created by I. Roemer Sadhana Consulting</description>
    <label>Productive Utilization?</label>
    <type>Checkbox</type>
</CustomField>