force-app/main/default/objects/KimbleOne__DeliveryElement__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DeliveryGroup__c</columns>
    <columns>KimbleOne__Product__c</columns>
    <columns>KimbleOne__InvoicingCurrencyContractRevenue__c</columns>
    <columns>KimbleOne__InvoicingCcyServicesInvoiceableAmount__c</columns>
    <columns>KimbleOne__InvoicingCcyExpensesInvoiceableAmount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>KimbleOne__ChangeOrder__c</columns>
    <columns>KimbleOne__ForecastStatus__c</columns>
    <columns>KimbleOne__DeliveryElementInvoicedWith__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>